fix: Remove deprecated method `newInstance`. (#370)